--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,4 +1,4 @@
-{{!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -38,4 +38,4 @@
     </script>
 </body>
 
-</html> --}}
+</html>
