--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{this.name}}</h5>
                             <p class="card-text">{{this.description}}</p>
+                            <a href="#" class="btn btn-secondary">Rs:{{this.price}}</a>
                             <a href="#" class="btn btn-primary">Buy Now</a>
                         </div>
                     </div>
