--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -4,7 +4,7 @@
             <div class="col-md-6">
                 <h2 class="text-center">Add Product</h2>
 
-                <form action="admin/add-product" method="post" enctype="multipart/form-data">
+                <form action="/admin/add-product" enctype="multipart/form-data" method="post" >
                     <div class="form-group">
                         <label for="">Name</label>
                         <input type="text" class="form-control" name="Name" placeholder="Product name">
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label for="">Image</label>
-                        <input type="file" name="image" class="form-control">
+                        <input type="file" name="Image" class="form-control">
                     </div>
 
                     <button type="submit" class="btn btn-success mt-4">Add item</button>
