--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -4,29 +4,23 @@
             <div class="col-md-6">
                 <h2 class="text-center">Add Product</h2>
 
-                <form action="/admin/add-product" enctype="multipart/form-data" method="post" >
-                    <div class="form-group">
+                <form action="/admin/add-product" enctype="multipart/form-data" method="POST" >
                         <label for="">Name</label>
                         <input type="text" class="form-control" name="Name" placeholder="Product name">
-                    </div>
-                    <div class="form-group">
+                   
                         <label for="">Category</label>
                         <input type="text" name="Category" class="form-control">
-                    </div>
-                    <div class="form-group">
+
                         <label for="">Price</label>
                         <input type="text" name="Price" class="form-control">
-                    </div>
-                    <div class="form-group">
+
                         <label for="">Description</label>
                         <input type="text" name="Description" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="">Image</label>
-                        <input type="file" name="Image" class="form-control">
-                    </div>
 
-                    <button type="submit" class="btn btn-success mt-4">Add item</button>
+                        <label for="Image">Image</label>
+                        <input type="file" name="Image" class="form-control">
+
+                    <button type="submit" class="btn btn-success mt-4">Submit</button>
 
                 </form>
             </div>
