--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -14,14 +14,14 @@
     </tr>
   </thead>
   <tbody>
-    {{#each products}}
+    {{#each productsForDisplay}}
 
     <tr>
       <th scope="row">{{this.index}}</th>
-      <td>{{this.name}}</td>
-      <td>{{this.category}}</td>
-      <td>{{this.price}}</td>
-      <td><img style="width: 50px; height:50px" src="{{this.img}}" alt=""></td>
+      <td>{{this.Name}}</td>
+      <td>{{this.Category}}</td>
+      <td>{{this.Price}}</td>
+      <td><img style="width: 50px; height:50px" src="{{this.Image}}" alt=""></td>
       
     </tr>
     {{/each}}
