--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -21,7 +21,8 @@
       <td>{{this.Name}}</td>
       <td>{{this.Category}}</td>
       <td>{{this.Price}}</td>
-      <td><img style="width: 50px; height:50px" src="{{this.Image}}" alt=""></td>
+      <td>{{this._id}}</td>
+      <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
       
     </tr>
     {{/each}}
