--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,15 +2,15 @@
     <section>
         <div class="container mt-5">
             <div class="row">
-                {{#each products}}
+                {{#each productsForDisplay}}
 
-                <div class="col-md-3 ">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="{{this.img}}" alt="Card image cap">
+                <div class="col-md-3 p-3 ">
+                    <div class="card" style="width: 15rem; height:24rem">
+                        <img class="card-img-top" src="/product-images/{{this._id}}.jpg" alt="Card image cap" style="height: 14rem;">
                         <div class="card-body">
-                            <h5 class="card-title">{{this.name}}</h5>
-                            <p class="card-text">{{this.description}}</p>
-                            <a href="#" class="btn btn-secondary">Rs:{{this.price}}</a>
+                            <h5 class="card-title">{{this.Name}}</h5>
+                            <p class="card-text">{{this.Description}}</p>
+                            <a href="#" class="btn btn-secondary">Rs:{{this.Price}}</a>
                             <a href="#" class="btn btn-primary">Buy Now</a>
                         </div>
                     </div>
