--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -15,15 +15,19 @@
                 <input type="email" name="email" id="typeEmailX" class="form-control form-control-lg" />
                 <label class="form-label" for="typeEmailX">Email</label>
               </div>
+              <div class="form-outline form-white mb-4">
+                <input type="text" name="name" id="typeName" class="form-control form-control-lg" />
+                <label class="form-label" for="typeName">Name</label>
+              </div>
 
               <div class="form-outline form-white mb-4">
                 <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
-              <div class="form-outline form-white mb-4">
+              {{!-- <div class="form-outline form-white mb-4">
                 <input type="password" name="password-repeat" id="typePasswordXr" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordXr">Repeat Password</label>
-              </div>
+              </div> --}}
 
               {{!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> --}}
 
