Login error updated

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -19,6 +19,11 @@
                 <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
+              {{#if loginErr}}
+              <div>
+              <p class="mb-0" style="color: red;">Invalid User ID or Password </p>
+               </div>
+              {{/if}}
 
               {{!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> --}}
 
