--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -12,12 +12,17 @@
                     <a class="nav-link" href="/">Products <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cart</a>
+                    <a class="nav-link" href="/cart">Cart</a>
                 </li>
+                    {{#if user}}
+
 
                 <li class="nav-item">
                     <a class="nav-link " href="#">Orders</a>
                 </li>
+                    {{/if}}
+
+                
             </ul>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
