--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -24,7 +24,7 @@
       <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
       <form action="/admin" method="post">
       <td><a href="/admin/edit-product/{{this._id}}" class="btn btn-info ml-auto">Edit</a></td>
-      <td><a href="/admin/delete-product/{{this._id}}" class="btn btn-danger ml-auto">Delete</a></td>
+      <td><a href="/admin/delete-product/{{this._id}}" class="btn btn-danger ml-auto" onclick="return confirm('Do you want to delete {{this.Name}} ?')">Delete</a></td>
       
       </form>
 
