--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each productsForDisplay}}
+    {{!-- {{#each productsForDisplay}}
 
     <tr>
       <th scope="row">{{this.index}}</th>
@@ -25,7 +25,7 @@
       <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
       
     </tr>
-    {{/each}}
+    {{/each}} --}}
    
   </tbody>
 </table>
