--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -5,13 +5,13 @@
                 {{#each productsForDisplay}}
 
                 <div class="col-md-3 p-3 ">
-                    <div class="card" style="width: 15rem; height:24rem">
+                    <div class="card" style="width: 17rem; height:24rem">
                         <img class="card-img-top" src="/product-images/{{this._id}}.jpg" alt="Card image cap" style="height: 14rem;">
                         <div class="card-body">
                             <h5 class="card-title">{{this.Name}}</h5>
                             <p class="card-text">{{this.Description}}</p>
                             <a href="#" class="btn btn-secondary">Rs:{{this.Price}}</a>
-                            <a href="#" class="btn btn-primary">Buy Now</a>
+                            <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to Cart</a>
                         </div>
                     </div>
                 </div>
