--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -21,8 +21,11 @@
       <td>{{this.Name}}</td>
       <td>{{this.Category}}</td>
       <td>{{this.Price}}</td>
-      <td>{{this._id}}</td>
+      <td>
+        <button class="cart-item-count mr-3 btn-secondary">-</button>1<button class="cart-item-count btn-success ml-3">+</button>
+      </td>
       <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+      <td><button class="btn btn-danger">Remove</button></td>
       
     </tr>
     {{/each}}
