--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -5,14 +5,14 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+          
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Products <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cart">Cart</a>
+                    <a class="nav-link" href="/cart">Cart<span class="badge badge-pill badge-warning">{{cartItemLength}}</span></a>
                 </li>
                     {{#if user}}
 
