--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -21,8 +21,9 @@
       <td>{{this.Name}}</td>
       <td>{{this.Category}}</td>
       <td>{{this.Price}}</td>
-      <td>{{this._id}}</td>
+      <td><button class="cart-item mr-3 btn-secondary">-</button>1 <button class="cart-item ml-3 btn-success">+</button></td>
       <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+      <td><button class="btn-danger">Delete</button></td>
       
     </tr>
     {{/each}}
