cart items count added in cart section

--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -11,7 +11,8 @@
                             <h5 class="card-title">{{this.Name}}</h5>
                             <p class="card-text">{{this.Description}}</p>
                             <a href="#" class="btn btn-secondary">Rs:{{this.Price}}</a>
-                            <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to Cart</a>
+                            {{!-- <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to Cart</a> --}}
+                            <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to cart</button>
                         </div>
                     </div>
                 </div>
@@ -19,3 +20,5 @@
             </div>
         </div>
     </section>
+    
+
