--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="/">Products <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cart">Cart<span class="badge badge-pill badge-warning">{{cartCount}}</span></a>
+                    <a class="nav-link" href="/cart">Cart<span class="badge badge-pill badge-warning" id="cart-Count">{{cartCount}}</span></a>
                 </li>
                     {{#if user}}
 
