--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -6,7 +6,7 @@
         <table class="table mt-5">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      {{!-- <th scope="col">#</th> --}}
       <th scope="col">Product</th>
       <th scope="col">category</th>
       <th scope="col">Price</th>
@@ -14,20 +14,26 @@
     </tr>
   </thead>
   <tbody>
-    {{#each cartItem}}
-
+    {{#each products}}
+      {{#each this.products}}
+    
     <tr>
-      <th scope="row">{{this.index}}</th>
+      {{!-- <th scope="row">Item</th> --}}
+      <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+
       <td>{{this.Name}}</td>
       <td>{{this.Category}}</td>
       <td>{{this.Price}}</td>
+    {{/each}}
+
       <td>
-        <button class="cart-item-count mr-3 btn-secondary">-</button>1<button class="cart-item-count btn-success ml-3">+</button>
+        <button class="cart-item-count mr-3 btn-secondary">-</button>{{this.quantity}}<button class="cart-item-count btn-success ml-3">+</button>
       </td>
-      <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+
       <td><button class="btn btn-danger">Remove</button></td>
       
     </tr>
+    
     {{/each}}
    
   </tbody>
