--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -15,19 +15,18 @@
   </thead>
   <tbody>
     {{#each products}}
-      {{#each this.products}}
+
     
     <tr>
       {{!-- <th scope="row">Item</th> --}}
-      <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+      <td><img style="width: 50px; height:50px" src="/product-images/{{this.product._id}}.jpg" alt=""></td>
 
-      <td>{{this.Name}}</td>
-      <td>{{this.Category}}</td>
-      <td>{{this.Price}}</td>
-    {{/each}}
+      <td>{{this.product.Name}}</td>
+      <td>{{this.product.Category}}</td>
+      <td>{{this.product.Price}}</td>
 
-      <td>
-        <button class="cart-item-count mr-3 btn-secondary">-</button>{{this.quantity}}<button class="cart-item-count btn-success ml-3">+</button>
+      <td >
+        <button onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)" class="cart-item-count mr-3 btn-secondary">-</button><span id="proCount">{{this.quantity}}</span><button class="cart-item-count btn-success ml-3" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
       </td>
 
       <td><button class="btn btn-danger">Remove</button></td>
@@ -40,3 +39,26 @@
 </table>
     </div>
 </section>
+<script>
+  function changeQuantity(cartId,productId,count){
+    $.ajax({
+      url:'/change-product-quantity',
+      data:{
+        cart:cartId,
+        product:productId,
+        count:count
+
+      },
+      method:'post',
+      success:(response)=>{
+        if(response.status){
+                let count=$('#proCount').html()
+                alert(count)
+                count=parseInt(count)+1
+                $("#proCount").html(count)
+            }
+         
+      }
+    })
+  }
+</script>
