Added checkout page,Total value of cart created

--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -12,7 +12,7 @@
                         <input type="text" name="Category" value="{{product.Category}}" class="form-control">
 
                         <label for="">Price</label>
-                        <input type="text" name="Price" value="{{product.Price}}" class="form-control">
+                        <input type="number" name="Price" value='{{product.Price}}'class="form-control">
 
                         <label for="">Description</label>
                         <input type="text" name="Description" value="{{product.Description}}" class="form-control">
