--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -24,37 +24,41 @@
           <td>{{this.product.Name}}</td>
           <td>{{this.product.Category}}</td>
           <td>Rs.{{this.product.Price}}</td>
+          
 
           <td>
-            <button onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)"
+            <button onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1,'{{../user._id}}')"
               class="cart-item-count mr-3 btn-secondary">-</button><span
               id="{{this.product._id}}">{{this.quantity}}</span><button class="cart-item-count btn-success ml-3"
-              onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
+              onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1,'{{../user._id}}')">+</button>
           </td>
 
-          <td><button onclick="changeQuantity('{{this._id}}','{{this.product._id}}',{{this.quantity}})"
+          <td><button onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-{{this.quantity}})"
               class="btn btn-danger">Remove</button></td>
 
         </tr>
         
         {{/each}}
+        
 
       </tbody>
     </table>
     <hr>
     <div class="float-right pr-3">
-    <h4 class="float-left mr-5 ">Total:</h4>
+    <h4 class="float-left mr-5 ">Total: <span id="total">{{totalValue}}</span> </h4>
     <a class="btn btn-warning mt-3" style="width: 100%;" href="/place-order">Place order</a>
     </div>
   </div>
 </section>
 <script>
-  function changeQuantity(cartId, productId, count) {
+  function changeQuantity(cartId, productId,count,userId) {
     let quantity = parseInt(document.getElementById(productId).innerHTML)
     count = parseInt(count)
     $.ajax({
       url: '/change-product-quantity',
       data: {
+        user:userId,
+
         cart: cartId,
         product: productId,
         count: count,
@@ -68,6 +72,7 @@
           location.reload()
         } else {
           document.getElementById(productId).innerHTML = quantity + count
+          document.getElementById('total').innerHTML = response.total
         }
 
       }
