--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -150,6 +150,9 @@
           data:$('#checkout-form').serialize()
           success:(response)=>{
             alert(response)
+            if(response.status){
+              location.href="/user/order"
+            }
           }
         })
 
