--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -1,38 +1,43 @@
 <section>
-    <div class="container">
-        <div class="row mt-4">
-            <a href="/admin/add-product" class="btn btn-success ml-auto">Add product</a>
-        </div>
-        <table class="table mt-5">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Product</th>
-      <th scope="col">category</th>
-      <th scope="col">Price</th>
-      <th scope="col">image</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each productsForDisplay}}
-
-    <tr>
-      <th scope="row">{{this.index}}</th>
-      <td>{{this.Name}}</td>
-      <td>{{this.Category}}</td>
-      <td>{{this.Price}}</td>
-      <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
-      <form action="/admin" method="post">
-      <td><a href="/admin/edit-product/{{this._id}}" class="btn btn-info ml-auto">Edit</a></td>
-      <td><a href="/admin/delete-product/{{this._id}}" class="btn btn-danger ml-auto" onclick="return confirm('Do you want to delete {{this.Name}} ?')">Delete</a></td>
-      
-      </form>
-
-      
-    </tr>
-    {{/each}}
-   
-  </tbody>
-</table>
+  <div class="container">
+    <div class="row mt-4">
+      <a href="/admin/add-product" class="btn btn-success ml-auto">Add product</a>
     </div>
+    <table class="table mt-5" id="productsTable">
+      <thead>
+        <tr>
+          <th scope="col">Product</th>
+          <th scope="col">category</th>
+          <th scope="col">Price</th>
+          <th scope="col">image</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each productsForDisplay}}
+
+        <tr>
+          <td>{{this.Name}}</td>
+          <td>{{this.Category}}</td>
+          <td>{{this.Price}}</td>
+          <td><img style="width: 50px; height:50px" src="/product-images/{{this._id}}.jpg" alt=""></td>
+          <form action="/admin" method="post">
+            <td><a href="/admin/edit-product/{{this._id}}" class="btn btn-info ml-auto">Edit</a>
+            <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger ml-auto"
+                onclick="return confirm('Do you want to delete {{this.Name}} ?')">Delete</a></td>
+
+          </form>
+
+
+        </tr>
+        {{/each}}
+
+      </tbody>
+    </table>
+  </div>
 </section>
+<script>
+  $(document).ready( function () {
+    $('#productsTable').DataTable();
+} );
+</script>
