--- a/views/admin/signup.hbs
+++ b/views/admin/signup.hbs
@@ -2,43 +2,47 @@
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+        <div class="card bg-secondary text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
             <div class="mb-md-5 mt-md-4 pb-5">
-              <form action="/login" method="post" enctype="multipart/form-data">
-              <h2 class="fw-bold mb-2 text-uppercase">ADMIN Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <form action="/adminsignup" method="post" enctype="multipart/form-data">
+
+              <h2 class="fw-bold mb-2 text-uppercase">ADMIN SIGNUP</h2>
+              <p class="text-white-50 mb-5">Create a New Account</p>
 
               <div class="form-outline form-white mb-4">
                 <input type="email" name="email" id="typeEmailX" class="form-control form-control-lg" />
                 <label class="form-label" for="typeEmailX">Email</label>
+              </div>
+              <div class="form-outline form-white mb-4">
+                <input type="text" name="name" id="typeName" class="form-control form-control-lg" />
+                <label class="form-label" for="typeName">Name</label>
               </div>
 
               <div class="form-outline form-white mb-4">
                 <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
-              {{#if loginErr}}
-              <div>
-              <p class="mb-0" style="color: red;">Invalid User ID or Password </p>
-               </div>
-              {{/if}}
+              {{!-- <div class="form-outline form-white mb-4">
+                <input type="password" name="password-repeat" id="typePasswordXr" class="form-control form-control-lg" />
+                <label class="form-label" for="typePasswordXr">Repeat Password</label>
+              </div> --}}
 
               {{!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> --}}
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Signup</button>
 
               {{!-- <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
                 <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
                 <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
               </div> --}}
-            </form>
+              </form>
             </div>
 
             <div>
-              <p class="mb-0">Don't have an account? <a href="/signup" class="text-white-50 fw-bold">Sign Up</a></p>
+              <p class="mb-0">Already have an account? <a href="/login" class="text-white-50 fw-bold">Login</a></p>
             </div>
 
           </div>
